--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha **/*.test.js",
+    "test-watch": "nodemon --exec npm test"
+  },
+  "engines": {
+    "node": "9.11.1"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +26,10 @@
     "noble": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^2.0.0"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^4.0.1",
+    "supertest": "^3.0.0"
   }
 }
